# nui-scp

./: .clang-format  .clangd  .env  .gitignore  .ignore  .parcelrc  CMakeLists.txt  LICENSE  README.md  checkout_deps.sh  output.txt  package-lock.json  package.json  tailwind.config.js
_cmake/: common_options.cmake  dependencies.cmake  resource_copy.cmake  theme_compilation.cmake
_cmake/dependencies/: efsw.cmake  expected.cmake  gtest.cmake  libssh.cmake  spdlog.cmake  ui5.cmake
backend/include/backend/: live_reload.hpp  main.hpp  rpc_helper.hpp  session.hpp  session_manager.hpp  sigchld.hpp  ssh_session_manager.hpp
backend/include/backend/events/: event_context.hpp
backend/include/backend/password/: password_prompter.hpp  password_provider.hpp
backend/include/backend/process/: boost_process.hpp  environment.hpp  process.hpp  process_hotfix_utf8.hpp  process_store.hpp
backend/include/backend/sftp/: all_operations.hpp  bulk_download_operation.hpp  download_operation.hpp  operation.hpp  operation_queue.hpp  operation_type.hpp  scan_operation.hpp  upload_operation.hpp
backend/source/backend/: CMakeLists.txt  live_reload.cpp  main.cpp  session.cpp  session_manager.cpp  ssh_session_manager.cpp
backend/source/backend/events/: event_context.cpp
backend/source/backend/password/: password_prompter.cpp
backend/source/backend/process/: environment.cpp  process.cpp  process_store.cpp
backend/source/backend/pty/linux/: pty.cpp
backend/source/backend/pty/windows/: conpty.cpp  pipe.cpp
backend/source/backend/sftp/: bulk_download_operation.cpp  download_operation.cpp  operation_queue.cpp  scan_operation.cpp  upload_operation.cpp
backend/source/backend/ssh/: channel.cpp  session.cpp  sftp_session.cpp  ssh_session_manager.cpp
backend/test/backend/: CMakeLists.txt  main.cpp  test_download_operation.hpp
constants/include/constants/: layouts.hpp  persistence.hpp
constants/source/constants/: CMakeLists.txt
diagrams/: bulk_download.puml
events/include/events/: app_event_context.hpp  app_wide_events.hpp
events/source/events/: CMakeLists.txt  app_event_context.cpp
frontend/include/frontend/: classes.hpp  input_dialog.hpp  main_page.hpp  nlohmann_compat.hpp  observed_random_access_map.hpp  password_prompter.hpp  session.hpp  session_area.hpp  sidebar.hpp  tailwind.hpp  toolbar.hpp
frontend/source/frontend/: CMakeLists.txt  input_dialog.cpp  main.cpp  main_page.cpp  password_prompter.cpp  session.cpp  session_area.cpp  sidebar.cpp  toolbar.cpp
frontend/source/frontend/components/: progress_bar.cpp
frontend/source/frontend/dialog/: confirm_dialog.cpp  input_dialog.cpp  password_prompter.cpp
frontend/source/frontend/session_components/: operation_queue.cpp  session_options.cpp
frontend/source/frontend/terminal/: executing_engine.cpp  msys2.cpp  sftp_file_engine.cpp  ssh_channel.cpp  ssh_engine.cpp  terminal.cpp  user_control_engine.cpp
ids/include/ids/: id.hpp  ids.hpp
ids/source/ids/: CMakeLists.txt
log/include/log/: def.hpp  level.hpp  log.hpp  logger_backend.hpp  logger_frontend.hpp
log/source/log/: CMakeLists.txt  log.cpp
nui-file-explorer/include/nui-file-explorer/: dropdown_menu.hpp  file_grid.hpp  inline_css.hpp
nui-file-explorer/source/nui-file-explorer/: CMakeLists.txt  dropdown_menu.cpp  file_grid.cpp
nui-file-explorer/styles/: dropdown_menu.css  file_grid.css
persistence/include/persistence/: inheritable_state.hpp  reference.hpp  state.hpp  state_core.hpp  state_holder.hpp
persistence/source/persistence/: CMakeLists.txt  reference.cpp  state.cpp  state_core.cpp  state_holder.cpp  state_holder_backend.cpp  state_holder_frontend.cpp
persistence/source/persistence/state/: common_terminal_options.cpp  queue_options.cpp  sftp_options.cpp  ssh_options.cpp  ssh_session_options.cpp  state.cpp  terminal_engine.cpp  terminal_options.cpp  terminal_theme.cpp  termios.cpp  ui_options.cpp
shared_data/include/shared_data/: directory_entry.hpp  error_or_success.hpp  is_paused.hpp  shared_data.hpp  time_point.hpp
shared_data/source/shared_data/: CMakeLists.txt  directory_entry.cpp
shared_data/source/shared_data/file_operations/: download_progress.cpp  operation_added.cpp  operation_added_val.cpp  operation_completed.cpp  operation_error.cpp  operation_state.cpp  operation_type.cpp  operation_type_val.cpp
ssh/include/ssh/: channel.hpp  file_information.hpp  file_stream.hpp  file_stream_interface.hpp  processing_thread.hpp  sequential.hpp  session.hpp  sftp_error.hpp  sftp_session.hpp
ssh/source/ssh/: CMakeLists.txt  channel.cpp  file_information.cpp  file_stream.cpp  processing_thread.cpp  session.cpp  sftp_session.cpp
ssh/source/ssh/async/: processing_thread.cpp
ssh/test/ssh/: CMakeLists.txt  common_fixture.hpp  main.cpp  test_processing_thread.hpp  test_sftp.hpp  test_ssh_session.hpp
ssh/test/ssh/test_ssh2_servers/: .gitignore  bash_emulator.mjs  key.private  key.public  noop.mjs  package-lock.json  package.json  sftp_server.mjs  shell_emulator.mjs  webpack.config.js
ssh/test/ssh/test_ssh2_servers/source/: cli.mjs  fake_file_system.mjs  human_file_size.mjs  log.mjs  make_semi_hex_string.mjs  sftp_longname.mjs
ssh/test/ssh/utility/: node.cpp  node.hpp  temporary_directory.hpp
static/: index.html
static/source/: content_panel_manager.ts  ids.ts  index.js  livereload.ts
static/source/content_panels/: file_explorer.ts  nui_widget.ts  operation_queue.ts  session_options.ts  terminal.ts
static/styles/: main.css  main_page.css  operation_queue.css  session.css  session_area.css  sidebar.css  toolbar.css
static/styles/lumino/: index.css  tabbar.css
themes/: compile.mjs
themes/dark/: options.json  theme.less
utility/include/utility/: awaiter.hpp  convert_naming_convention.hpp  describe.hpp  directory_traversal.hpp  endian.hpp  enum_string_convert.hpp  expected.hpp  format_bytes.hpp  json.hpp  overloaded.hpp  temporary_directory.hpp  visit_overloaded.hpp
utility/source/utility/: CMakeLists.txt  temporary_directory.cpp
utility/test/utility/: CMakeLists.txt  main.cpp  test_directory_traversal.hpp
(+66 files in other folders)
